2018-04-25 Alexander Held <alexander.held@cern.ch>
    * adding a few missing options to the reference config and fixing typos
    * extending readme with missing options

2018-04-16 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added few missing options to jobSchema (DoSignalRegionsPlot and SeparateGammas)
    * Fixed issue of info messages printed if debug = 0 before config reading (function added to ConfigParser and called at top of myFit)
    * Fixed typo in multi-fit config reader
    * "No systematics found in fit result file" moved to Debug stream
    * Added logo (can switch it on with Logo: TRUE)
    * Added RunROOTMacros option to multi-fit (but crashing with limits... so TRUE by default)
    
2018-03-09 Tomas Dado <tomas.dado@cern.ch>
	* Created new class that processes config input
	* Moved readig of the config from TthFit.C into separate file

2018-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Few more fixes to post-fit impact table

2018-03-21 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Few more fixes to post-fit impact table
    
2018-03-16 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Extending post-fit impact table functionality to MultiFit
    * Fixing two small issues with post-fit impact tables (for cases with no minos or with systName!=nuisPar)
    

2018-03-09 Alexander Held <alexander.held@cern.ch>
    * Added the possibility to create tables showing post-fit impact of groups of nuisance parameters on the POI, see readme for more information
    * Can now group Systematics and NormFactors via new SubCategory options
        * Two groups exist by default, "Gammas" and "FullSyst"
    * New command line option "i" to perform required calculations
        * Can use GroupedImpact option to parallelize (similar to ranking)

2018-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Merging some features developed for the 4top analysis
    * Updating ROOT version
