@@ -85,7 +85,6 @@ Job: string
   DecorrSysts: string
   DoSignalRegionsPlot: TRUE/FALSE
   TableOptions: string
-  ReduceNPforRanking: float
   Suffix: string
   SaveSuffix: string
   HideNP: string
