@@ -1,3 +1,6 @@
+2018-05-04 Alexander Held <alexander.held@cern.ch>
+    * removing ReduceNPforRanking option (not in use, and was not working properly either)
+
 2018-04-25 Alexander Held <alexander.held@cern.ch>
     * adding a few missing options to the reference config and fixing typos
     * extending readme with missing options
